--- a/.github/workflows/cd-ios.yml
+++ b/.github/workflows/cd-ios.yml
@@ -25,6 +25,20 @@ on:
             build-version:
                 required: true
                 type: string
+            package-name:
+                required: true
+                type: string
+        secrets:      
+            p12-cert:
+                required: true
+            p12-cert-password:
+                required: true
+            appstore-issuer:
+                required: true
+            appstore-keyid:
+                required: true
+            appstore-private-key:
+                required: true
 
 jobs:
     publish-ios:
@@ -45,11 +59,40 @@ jobs:
         - uses: actions/checkout@v3
           name: Checkout the code
 
-      # This step might be obsolete at some point as .NET MAUI workloads 
-      # are starting to come pre-installed on the GH Actions build agents.
+        # This step might be obsolete at some point as .NET MAUI workloads 
+        # are starting to come pre-installed on the GH Actions build agents.
         - name: Install MAUI Workload
           run: dotnet workload install maui --ignore-failed-sources
 
         - name: Restore Dependencies
           run: dotnet restore ${{ inputs.project-file }}
     
+         # These expire on a yearly basis, so check if they're still valid!
+        - uses: apple-actions/import-codesign-certs@v2
+          with: 
+            p12-file-base64: ${{ secrets.p12-cert }}
+            p12-password: ${{ secrets.p12-cert-password }} 
+
+        - name: Download Provisioning Profiles
+          id: provisioning
+          uses: apple-actions/download-provisioning-profiles@v1
+          with: 
+            bundle-id: ${{ inputs.package-name }}
+            profile-type: 'IOS_APP_STORE'
+            issuer-id: ${{ secrets.appstore-issuer }}
+            api-key-id: ${{ secrets.appstore-keyid }}
+            api-private-key: ${{ secrets.appstore-private-key }}    
+
+        - name: Version the app
+          uses: managedcode/MAUIAppVersion@v1
+          with: 
+            csproj: ${{ inputs.project-file }}
+            version: ${{ github.run_number }} # to keep value unique
+            displayVersion: ${{ inputs.build-version }}.${{ github.run_number }}
+            printFile: true # optional 
+
+        - name: Publish the iOS app
+          run: dotnet publish ${{inputs.project-file}} -c ${{ inputs.build-config }} -f:${{ inputs.dotnet-version-target }}-ios /p:ArchiveOnBuild=true /p:EnableAssemblyILStripping=false            
+
+
+            
