--- a/.github/workflows/cd-ios.yml
+++ b/.github/workflows/cd-ios.yml
@@ -91,6 +91,8 @@ jobs:
             displayVersion: ${{ inputs.build-version }}.${{ github.run_number }}
             printFile: true # optional 
 
+        #PUBLICACIÓN -genera el IPA
+
         - name: Publish the iOS app
           run: dotnet publish ${{inputs.project-file}} -c ${{ inputs.build-config }} -f:${{ inputs.dotnet-version-target }}-ios /p:ArchiveOnBuild=true /p:EnableAssemblyILStripping=false            
 
